--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables (contains secrets!)
 .env
+.env.local
+.env.*.local
+
+# Database migrations (local reference only)
+database/
